retrieveUnpackaged/objects/EpAdapterUnitOfWork__c.object
<CustomObject>
    <description>A unit of work to be handled by the EP adapter.</description>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Unit of Work</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>PENDING</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PROCESSED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAILED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TriggeredDateTime__c</fullName>
        <description>The timestamp when the unit of work has been initially triggered</description>
        <label>TriggeredDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>ATOMIC_SINGLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATOMIC_MULTIPLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPOUND_SAME_TYPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPOUND_MULTIPLE_TYPES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UnitOfTransferId__c</fullName>
        <description>The unit of transfer (UoT) that was used to transfer the unit of work.</description>
        <label>UnitOfTransferId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitOfWorkId__c</fullName>
        <externalId>true</externalId>
        <label>UnitOfWorkId</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>EpAdapterUnitOfWork</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
    </listViews>
    <nameField>
        <label>EpAdapterUnitOfWork-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EpAdapterUnitOfWorks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>